Fix firefox text overflow

--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@ body,
 }
 
 .card {
-  height: 270px;
+  height: 250px;
   width: 170px;
   background-color: rgb(228, 224, 217);
   transition: 0.25s;
@@ -39,6 +39,7 @@ body,
 
 .card > * {
   pointer-events: none;
+  white-space: nowrap;;
 }
 
 .card:hover {
@@ -49,12 +50,13 @@ body,
   height: 80%;
   width: 90%;
   margin: 10px;
+  margin-bottom: 0;
   object-fit: cover;
 }
 
 .card > .name {
   text-align: center;
-  font-size: 24px;
+  font-size: 1.2rem;
 }
 
 .hint {
